--- a/dev/assets/_modules/arrow-right.pug
+++ b/dev/assets/_modules/arrow-right.pug
@@ -1,5 +1,5 @@
 mixin arrow-right(linkTo, span)
-	a.arrow-right.right-translate(href=linkTo)
+	a.arrow-right(href=linkTo)
 		.arrow-wrapper
 			.rectangle-arrow
 			+icon-arrow
