--- a/dev/assets/_templates/layout.pug
+++ b/dev/assets/_templates/layout.pug
@@ -29,13 +29,40 @@ html(class='no-js')
 		include ../_modules/project-mixin.pug
 		include ../_modules/about-mixin.pug
 		include ../_modules/project-sections.pug
-		//- include ../_modules/grid-lines.pug
-		include ../_modules/grid-lines-full.pug
 		include ../_modules/arrow-right.pug
+		include ../_modules/project-box-mixin.pug
 
+		//- include ../_modules/grid-lines.pug
+		//- include ../_modules/grid-lines-full.pug
+
+		//- include ../_modules/intro.pug
+		
 		//- tester
 		.img-tester
-			img(src="img/home_desk.jpg", alt="")
+			//- desk
+			//- img(src="img/testing/home_desk.jpg", alt="")
+			//- img(src="img/testing/ourWork_desk.jpg", alt="")
+			//- img(src="img/testing/workSections_desk.jpg", alt="")
+			//- img(src="img/testing/project_desk.jpg", alt="")
+
+			//- img(src="img/testing/about_desk.jpg", alt="")
+			//- img(src="img/testing/thanks_desk.jpg", alt="")
+			//- img(src="img/testing/contact_desk.jpg", alt="")
+			
+			//- img(src="img/testing/message_desk.jpg", alt="")
+
+			
+			//- mobile
+			//- img(src="img/testing/home_mob.jpg", alt="")
+			//- img(src="img/testing/ourWork_mob.jpg", alt="")
+			//- img(src="img/testing/workSections_mob.jpg", alt="")
+			//- img(src="img/testing/project_mob.jpg", alt="")
+
+			//- img(src="img/testing/about_mob.jpg", alt="")
+			//- img(src="img/testing/thanks_mob.jpg", alt="")
+			//- img(src="img/testing/contact_mob.jpg", alt="")
+
+			//- img(src="img/testing/message_mob.jpg", alt="")
 		
 		//- content
 		#main-wrapper
