--- a/dev/assets/contact.pug
+++ b/dev/assets/contact.pug
@@ -7,14 +7,18 @@ block content
 		.row
 			.center-wrapper
 				section.about-block.offset-1.snj-col-10.offset-md-2.snj-col-md-5
-					h2.subtitle-block.sub-1.tween-up Get in Touch
-					h2.subtitle-block.sub-2.tween-up Contact Us
-					h1.title-block.tween-up Let’s link. Let’s build…
+					h2.subtitle-block.sub-1.translate-up Get in Touch
+					h2.subtitle-block.sub-2.translate-up Contact Us
+					h1.title-block.translate-up Let’s link. Let’s build…
 					.arrow-container
-						+arrow-right("/", "Drop us a line")
+						.arrow-right.right-translate
+							.arrow-wrapper
+								.rectangle-arrow
+								+icon-arrow
+							span Drop us a line
 
 				aside.social-block.snj-col-4.offset-1.snj-col-lg-1.offset-lg-1
-					h2.subtitle-block.tween-up Social
+					h2.subtitle-block.translate-up Social
 					ul
 						li.tween-right
 							a(href="#") Instagram
@@ -26,14 +30,14 @@ block content
 							a(href="#") Linkedin
 
 				aside.info-block-wrapper.snj-col-4.offset-2.snj-col-md-9.offset-md-1
-					.info-block.tween-up
+					.info-block.translate-up
 						h3 Office
 						p Dubai Design District<br> Building 7, 502A<br>Dubai, U.A.E. 
 
-					.info-block.tween-up
+					.info-block.translate-up
 						h3 Number
 						p +971 (0) 4 330 0311
-					.info-block.tween-up
+					.info-block.translate-up
 						p © Copyright 2019
 	a(href="ourwork.html")
 		button.btn-wrapper.btn-pages
