--- a/dev/assets/project-event-amongst.pug
+++ b/dev/assets/project-event-amongst.pug
@@ -1,15 +1,16 @@
 extends _templates/layout.pug
 block preloader
-	.preloader.color-2
+	//- .preloader.color-2
 block content
 	.snj-container-fluid.project-page
 		.row
 			section.project-about
 				//- .background-wrapper.p-about-bg
-				.info-wrapper.snj-col-10.offset-1.snj-col-md-4.offset-md-4
-					h2.subtitle-block Event Curation
-					h1.project-title Amongst Few
-					span 02
+				//- .info-wrapper.snj-col-10.offset-1.snj-col-md-4.offset-md-4
+				//- 	h2.subtitle-block Event Curation
+				//- 	h1.project-title Amongst Few
+				//- 	span 02
+				+hero-project("Event Curation","Amongst Few","02")
 				aside.especifications.snj-col-10.offset-1.snj-col-md-6.offset-md-3
 					.snj-row
 						div.especific-item.snj-col-md-2
