--- a/dev/assets/project-social-power.pug
+++ b/dev/assets/project-social-power.pug
@@ -1,5 +1,7 @@
 extends _templates/layout.pug
 
+block preloader
+	//- .preloader.color-2
 block content
 	.snj-container-fluid.project-page
 		.row
