--- a/dev/assets/thanks.pug
+++ b/dev/assets/thanks.pug
@@ -4,9 +4,9 @@ block preloader
 block content
 	.thanks-section.snj-container-fluid
 		.row
-			.snj-col-9.offset-1.snj-col-md-6.offset-md-2
-				h2.title-block Thanks
-				p.subtitle-block We’ll get back to you as soon we possibly can.Meanwhile check our stuff.
+			.snj-col-9.offset-1.snj-col-md-6.offset-md-3
+				h2.title-block Thanks.
+				p.subtitle-block We’ll get back to you as soon we possibly can. Meanwhile check our stuff.
 				.social-wrapper
 					a(href=linkedin)
 						+link-icon-2
