--- a/dev/scss/modules/_nav.scss
+++ b/dev/scss/modules/_nav.scss
@@ -2,26 +2,33 @@ nav.nav-wrapper{
 	width: 20px;
 	height: 14px;
 	padding: 3px 0;
-	display: inline-block;
-	float: right;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-end;
+	// display: inline-block;
+	// float: right;
 	// background-color: yellow;
 	[class^="menu-line-"]{		
 		background-color: $cream;
 		height: 2px;
 		// margin: 2px 0;
-		position: relative;
-		display: block
+		// position: relative;
+		// display: block
 	}
 	.menu-line-1{
-		width: 20px;
+		width: 100%;
 		margin-bottom: 2px;
 	}
 	.menu-line-2{
-		width: 10px;
-		float: right;
+		width: 50%;
+		// float: right;
 		margin-top: 2px;
 	}
-	@media (min-width: 768px) {
+	@media(max-width: 768px){
+		margin-top: 3px;
+		margin-right: 15px;
+	}
+	@media (min-width: 769px) {
 		display: none;
 	}
 }
