--- a/dev/assets/_modules/icons.pug
+++ b/dev/assets/_modules/icons.pug
@@ -62,20 +62,26 @@ mixin video-exit-icon
 //- social media icons
 //- instagram
 mixin ins-icon
-	svg(xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="20" height="20" viewBox="0 0 20 20")
-		ellipse(cx="15.3" cy="4.6" rx="1.2" ry="1.2")
-		path(d="M10,4.8c-2.7,0-5.1,2.2-5.1,5.1c0,2.8,2.2,5.1,5.1,5.1s5.1-2.2,5.1-5.1S12.7,4.8,10,4.8z M10,13.2c-1.8,0-3.3-1.5-3.3-3.3S8.1,6.6,10,6.6s3.3,1.5,3.3,3.3C13.2,11.8,11.8,13.2,10,13.2z")
-		path(d="M18.3,1.7C17.3,0.6,15.9,0,14.1,0H5.9C2.3,0,0,2.4,0,5.8v8.3c0,1.8,0.5,3.2,1.7,4.3C2.7,19.5,4.2,20,5.9,20h8.2c1.7,0,3.2-0.5,4.2-1.6c1.1-1.1,1.7-2.6,1.7-4.3V5.8C19.9,4.2,19.4,2.8,18.3,1.7z M18.1,14.2c0,1.2-0.4,2.3-1.2,2.9c-0.7,0.7-1.7,1.1-2.9,1.1H5.9c-1.2,0-2.2-0.4-2.9-1.1c-0.7-0.8-1.2-1.8-1.2-3V5.8c0-1.2,0.4-2.3,1.1-2.9c0.7-0.7,1.7-1,2.9-1H14c1.2,0,2.2,0.4,3,1.2c0.7,0.8,1.1,1.8,1.1,2.9V14.2L18.1,14.2z")
+	svg(xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="18" height="18" viewBox="0 0 18 18")
+		circle(cx="13.77" cy="4.14" r="1.08")
+		path(d="M9,4.32A4.61,4.61,0,0,0,4.41,8.91,4.55,4.55,0,0,0,9,13.5a4.5,4.5,0,0,0,4.59-4.59A4.61,4.61,0,0,0,9,4.32Zm0,7.56a3,3,0,0,1-3-3,3,3,0,0,1,5.94,0A3,3,0,0,1,9,11.88Z")
+		path(d="M16.47,1.53A4.88,4.88,0,0,0,12.69,0H5.31A5,5,0,0,0,0,5.22v7.47a4.9,4.9,0,0,0,1.53,3.87A5,5,0,0,0,5.31,18h7.38a5,5,0,0,0,3.78-1.44A5.36,5.36,0,0,0,18,12.69V5.22A5.49,5.49,0,0,0,16.47,1.53Zm-.18,11.25a3.2,3.2,0,0,1-1.08,2.61,3.6,3.6,0,0,1-2.61,1H5.31a3.6,3.6,0,0,1-2.61-1,4.05,4.05,0,0,1-1.08-2.7V5.22a3.46,3.46,0,0,1,1-2.61,3.55,3.55,0,0,1,2.61-.9H12.6a3.66,3.66,0,0,1,2.7,1.08,3.92,3.92,0,0,1,1,2.61v7.38Z")
 
 //- linkedin
 mixin link-icon
-	svg(xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="20" height="20" viewBox="0 0 20 20" xml:space="preserve")
-		path(d="M18.4,0H1.5C0.7,0,0,0.7,0,1.4v17c0,0.8,0.7,1.4,1.5,1.4h17c0.8,0,1.5-0.7,1.5-1.4v-17C19.9,0.7,19.3,0,18.4,0z M5.9,17h-3V7.5h2.9C5.9,7.5,5.9,17,5.9,17z M4.4,6.2c-0.9,0-1.7-0.8-1.7-1.8s0.8-1.7,1.7-1.7s1.8,0.8,1.8,1.7S5.3,6.2,4.4,6.2z M17,17h-2.9v-4.6c0-1.1,0-2.5-1.5-2.5s-1.8,1.2-1.8,2.4V17H7.8V7.5h2.8v1.3l0,0c0.4-0.7,1.3-1.5,2.8-1.5c3,0,3.6,2,3.6,4.5C17,11.8,17,17,17,17z")
+	svg(xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="19.38" height="18" viewBox="0 0 19.38 18" xml:space="preserve")
+		//- path(d="M18.4,0H1.5C0.7,0,0,0.7,0,1.4v17c0,0.8,0.7,1.4,1.5,1.4h17c0.8,0,1.5-0.7,1.5-1.4v-17C19.9,0.7,19.3,0,18.4,0z M5.9,17h-3V7.5h2.9C5.9,7.5,5.9,17,5.9,17z M4.4,6.2c-0.9,0-1.7-0.8-1.7-1.8s0.8-1.7,1.7-1.7s1.8,0.8,1.8,1.7S5.3,6.2,4.4,6.2z M17,17h-2.9v-4.6c0-1.1,0-2.5-1.5-2.5s-1.8,1.2-1.8,2.4V17H7.8V7.5h2.8v1.3l0,0c0.4-0.7,1.3-1.5,2.8-1.5c3,0,3.6,2,3.6,4.5C17,11.8,17,17,17,17z")
+		path(d="M6.92,5.54H10.8v2h0a4.23,4.23,0,0,1,3.78-2c4,0,4.8,2.52,4.8,5.8V18h-4V12.09c0-1.41,0-3.22-2.08-3.22S10.92,10.4,10.92,12v6h-4Z")
+		path(d="M0,5.54H4.16V18H0Z")
+		path(d="M4.16,2.08A2.08,2.08,0,1,1,2.08,0,2.08,2.08,0,0,1,4.16,2.08Z")
 
 //- twitter
 mixin tw-icon
-	svg(xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="25.27" height="20" viewBox="0 0 25.27 20" xml:space="preserve")
-		path(d="M22.5,4.9c0,0.3,0,0.4,0,0.7c0,6.7-5.2,14.4-14.6,14.4c-2.9,0-5.6-0.8-7.9-2.3c0.4,0.1,0.8,0.1,1.3,0.1c2.4,0,4.6-0.8,6.4-2.2c-2.3,0-4.2-1.5-4.8-3.5c0.3,0.1,0.7,0.1,1,0.1c0.5,0,0.9-0.1,1.3-0.2c-2.3-0.5-4.1-2.5-4.1-4.9c0,0,0,0,0-0.1c0.7,0.4,1.5,0.6,2.3,0.7C2.1,6.8,1.3,5.3,1.3,3.5c0-0.9,0.3-1.8,0.7-2.5c2.5,3.1,6.4,5.1,10.6,5.3c-0.1-0.3-0.2-0.8-0.2-1.2c0-2.8,2.3-5.1,5.2-5.1c1.5,0,2.8,0.6,3.8,1.6c1.2-0.3,2.3-0.7,3.3-1.3c-0.4,1.2-1.2,2.2-2.3,2.8c1-0.2,2-0.4,2.9-0.8C24.4,3.3,23.5,4.2,22.5,4.9z")
+	svg(xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22.77" height="18" viewBox="0 0 22.77 18" xml:space="preserve")
+		//- 20px
+		//- path(d="M22.5,4.9c0,0.3,0,0.4,0,0.7c0,6.7-5.2,14.4-14.6,14.4c-2.9,0-5.6-0.8-7.9-2.3c0.4,0.1,0.8,0.1,1.3,0.1c2.4,0,4.6-0.8,6.4-2.2c-2.3,0-4.2-1.5-4.8-3.5c0.3,0.1,0.7,0.1,1,0.1c0.5,0,0.9-0.1,1.3-0.2c-2.3-0.5-4.1-2.5-4.1-4.9c0,0,0,0,0-0.1c0.7,0.4,1.5,0.6,2.3,0.7C2.1,6.8,1.3,5.3,1.3,3.5c0-0.9,0.3-1.8,0.7-2.5c2.5,3.1,6.4,5.1,10.6,5.3c-0.1-0.3-0.2-0.8-0.2-1.2c0-2.8,2.3-5.1,5.2-5.1c1.5,0,2.8,0.6,3.8,1.6c1.2-0.3,2.3-0.7,3.3-1.3c-0.4,1.2-1.2,2.2-2.3,2.8c1-0.2,2-0.4,2.9-0.8C24.4,3.3,23.5,4.2,22.5,4.9z")
+		//- 18px
+		path(d="M20.25,4.41V5A13,13,0,0,1,7.11,18,12.9,12.9,0,0,1,0,15.93,4.75,4.75,0,0,0,1.17,16a9.3,9.3,0,0,0,5.76-2,4.48,4.48,0,0,1-4.32-3.15,3.06,3.06,0,0,0,.9.09,4.56,4.56,0,0,0,1.17-.18A4.61,4.61,0,0,1,1,6.39V6.3a5.54,5.54,0,0,0,2.07.63A4.48,4.48,0,0,1,1.17,3.15,4.68,4.68,0,0,1,1.8.9a13.12,13.12,0,0,0,9.54,4.77,3.87,3.87,0,0,1-.18-1.08A4.63,4.63,0,0,1,15.84,0a4.76,4.76,0,0,1,3.42,1.44,10.76,10.76,0,0,0,3-1.17,4.43,4.43,0,0,1-2.07,2.52,12.41,12.41,0,0,0,2.61-.72A15.25,15.25,0,0,1,20.25,4.41Z")
 mixin link-icon-2
 	svg(xmlns="http://www.w3.org/2000/svg" viewBox="0 0 21.54 20" height="20" width="21.54")
 		path(d="M7.69,6.15H12V8.34H12a4.7,4.7,0,0,1,4.2-2.19c4.5,0,5.33,2.8,5.33,6.44V20H17.1V13.43c0-1.57,0-3.58-2.31-3.58s-2.66,1.7-2.66,3.47V20H7.69Z")
