--- a/dev/assets/_modules/nav.pug
+++ b/dev/assets/_modules/nav.pug
@@ -1,3 +1,3 @@
 nav.nav-wrapper
-	span.menu-line-1
-	span.menu-line-2
+	span.menu-line-1.jb-cascade(data-cascade="line-full" data-cascade-delay-mobile="2" data-cascade-delay="2")
+	span.menu-line-2.jb-cascade(data-cascade="line-half" data-cascade-delay-mobile="3" data-cascade-delay="3")
