--- a/dev/assets/project-brand-beams.pug
+++ b/dev/assets/project-brand-beams.pug
@@ -1,33 +1,26 @@
 extends _templates/layout.pug
 block preloader
-	.preloader.color-2
+	//- .preloader.color-2
 block content
 	.snj-container-fluid.project-page
 		.row
 			section.project-about
-				//- .background-wrapper.p-about-bg
-				.info-wrapper.snj-col-10.offset-1.snj-col-md-4.offset-md-4
-					h2.subtitle-block Branding & Design
-					h1.project-title High Beams
-					span 01
+				+hero-project("Branding & Design","High Beams", "01")
 				aside.especifications.snj-col-10.offset-1.snj-col-md-6.offset-md-3
 					.snj-row
 						div.especific-item.snj-col-md-2
-							h4 Cliente
-							h5 High Beams	
+							+project-box("Client", "High Beams")
 						div.especific-item.offset-md-2.snj-col-md-4
-							h4 Project
-							h5 Branding & Design
+							+project-box("Project", "Branding & Design",{lineDelayMob: 3, clientDelayMob: 7, projectDelayMob: 8})
 						div.especific-item.snj-col-md-2.offset-md-2
-							h4 Year
-							h5 2017
+							+project-box("Year", "2017",{lineDelayMob: 4, clientDelayMob: 9, projectDelayMob: 10})
 			section.project-description
-				.snj-col-10.offset-1.snj-col-md-6.offset-md-3
-					h1.project-title High Beams
-					div.paragraph-left
+				.snj-col-10.offset-1.snj-col-md-6.offset-md-3.about-wrapper
+					h1.project-title.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="10" data-cascade-delay="5") High Beams
+					div.paragraph-left.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="11" data-cascade-delay="6")
 						p High Beams Dubai is the city’s first Run Crew and Sound System. Its membership includes some of Dubai’s top DJs, trainers and creatives. To break away from the mainstream, PUMA encouraged, and entrusted, Jungle Beige to explore the run crew concept/movement found in cities like New York and London. 
 						p The challenge was to build something similar in a transient city that you can’t run in all year long.  Our Creative Director, a High Beams founder, and the agency worked with the crew to make these perceived disadvantages something to remix and celebrate.
-					div.paragraph-right
+					div.paragraph-right.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="11" data-cascade-delay="6")
 						p The crew gets its name from the fact that people in Dubai flash their high beams at you on the highway when you’re driving too slow. Since the crew can’t train all year long, they also have a weekly circuit training session they refer to as Saturday Brunch - brunches being another “Dubai thing”.
 						p Finally, with crew members from all over the world, with different backgrounds, languages, etc., the ethos of the crew is Vibes First. Because if the vibes are right, people can definitely connect, train and party together. 
 			.p-photo1
@@ -65,8 +58,8 @@ block content
 							.rectangle-arrow
 							+icon-arrow
 				p.copyright © Copyright 2019
+
 	a.btn-wrapper.btn-pages(href="workbranding.html")
-		span.btn-animate-up
-			+close-icon
-block footer
+		span.animate-up.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1")
+			+back-icon-btn
 	+footer("scroll")
