--- a/dev/assets/workmanagement.pug
+++ b/dev/assets/workmanagement.pug
@@ -1,6 +1,6 @@
 extends _templates/layout.pug
 block preloader
-	.preloader.color-1.preloader-cut
+	//- .preloader.color-1.preloader-cut
 block content
 	.ourwork-sections-detail#management-work
 		.background-wrapper.worksections-bg
@@ -14,7 +14,7 @@ block content
 		.sections-p-wrapper.project-bg-4
 			+project-sections(" Content creation & Management", "Cova", "04", "project-manage-cova.html")
 	a.btn-wrapper.btn-pages(href="ourwork.html")
-		span.btn-animate-up
+		span.animate-up.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1")
 			+back-icon-btn
 block footer
 	+footer('scroll')
