--- a/dev/scss/app.scss
+++ b/dev/scss/app.scss
@@ -15,6 +15,7 @@
 @import 'global/_helpers';
 @import 'global/_components';
 @import 'global/_keyframes';
+@import 'global/animations';
 
 @import 'views/_home';
 @import 'views/_ourwork';
@@ -34,10 +35,9 @@
 @import 'modules/_preloader';
 
 .img-tester{
-	opacity: 0;
-
+	opacity: .5;
 	pointer-events: none;
-	z-index: 1;
+	z-index: 99;
 	position: absolute;
 	top: 0; left: 0;
 	width: 100%;
@@ -45,5 +45,6 @@
 
 	img{
 		width: 100%;
+		display: block;
 	}
 }
