--- a/dev/scss/global/_grid.scss
+++ b/dev/scss/global/_grid.scss
@@ -37,8 +37,10 @@
   margin-right: auto;
   margin-left: auto;
   @media (min-width: 768px){
-    padding-right: 40px;
-    padding-left: 40px;
+    // padding-right: 40px;
+    // padding-left: 40px;
+    padding-right: 35px;
+    padding-left: 35px;
   }
 }
 
