--- a/dev/scss/global/_keyframes.scss
+++ b/dev/scss/global/_keyframes.scss
@@ -1,14 +1,16 @@
 //btn wrapper
-@-webkit-keyframes animateup {
-	48% {top: 150%;}
-	100% {top: 50%;}
+@-webkit-keyframes fade-up-btn {
+	0%{margin-top: 50px;opacity: 0;}
+	48% {margin-top: 50px;}
+	100% {margin-top: 0;opacity: 1;}
 }
 
-@keyframes animateup {
-	48% {top: 150%;}
-	100% {top: 50%;}
+@keyframes fade-up-btn {
+	0%{margin-top: 50px;opacity: 0;}
+	48% {margin-top: 50px;}
+	100% {margin-top: 0;opacity: 1;}
 }
-// BTN WRAPPEER COLOR
+// Center btn navigation
 @-webkit-keyframes backgroundBtn {
 	0%{background-color: $black;}
 	40% {background-color: $dark-gray;}
@@ -22,26 +24,43 @@
 	80% {background-color: #fff;}
 	100% {background-color: #fff;}
 }
-// up text translate
-@-webkit-keyframes upTranslate {
-	0% {transform:translateY(20px); opacity: .01}
+
+// general animations =====
+
+// fade Up
+@-webkit-keyframes fade-up{
+	0% {transform:translateY(26px); opacity: 0}
 	100% {opacity: 1}
 }
-
-@keyframes upTranslate {
-	0% {transform:translateY(20px); opacity: .01}
+@keyframes fadeUp {
+	0% {transform:translateY(26px); opacity: .01}
 	100% {opacity: 1}
+}
+// scale big-small
+@-webkit-keyframes scale-small{
+	0%{transform: scale(1.3);}
+	100%{transform: scale(1);}
+}
+
+// lines
+@-webkit-keyframes line-full{
+	0%{width: 0%;opacity: 0;}
+	100%{width: 100%; opacity: 1;}
+}
+@-webkit-keyframes line-half{
+	0%{width: 0%;opacity: 0;}
+	100%{width: 50%; opacity: 1;}
 }
 
 // right box translate
-@-webkit-keyframes rightTranslate {
+@-webkit-keyframes translate-right {
 	0% {transform:translateX(-30px);}
-	100% {opacity: 1}
+	100% {transform:translateX(0);opacity: 1}
 }
 
-@keyframes rightTranslate {
+@keyframes translate-right {
 	0% {transform:translateX(-30px); opacity: .01}
-	100% {opacity: 1}
+	100% {transform:translateX(0);opacity: 1}
 }
 //left box translate
 @-webkit-keyframes leftTranslate {
@@ -64,4 +83,25 @@
 @keyframes editRectArrow {
 	0% {width: calc(100%); opacity: .01;}
 	100% {opacity: 1}
+}
+
+// contact animation display text
+@keyframes displayText{
+	0%{
+		opacity: 1;
+	}
+	45%{
+		transform: translateY(20px);
+		opacity: 0;
+	}
+	50%{
+		opacity: 0;
+		transform: translateY(-20px);
+		color: white;
+	}
+	100%{
+		color:white;
+		opacity: 1;
+		// transform: translateY(inherit);
+	}
 }
