--- a/dev/scss/global/_vars.scss
+++ b/dev/scss/global/_vars.scss
@@ -22,3 +22,13 @@ $cream: #ffecd0;
 $snj-grid__maxWidth: 1212px;
 $snj-grid__gutterWidth: 10px;
 $snj-grid__gutterHalfWidth: $snj-grid__gutterWidth / 2;
+
+// Mobiles/Desktop animation sizes
+$mobile-max-width: 767px;
+$desktop-min-width: 768px;
+
+// Animation
+$easeOutQuint: cubic-bezier(0.23, 1, 0.32, 1);
+$duration_inview: 800ms;
+$delay_inview: 200ms;
+$duration_preloader: 1s;
