--- a/dev/scss/modules/_preloader.scss
+++ b/dev/scss/modules/_preloader.scss
@@ -22,23 +22,17 @@
 	width: calc(83.34% - 32px)
 }
 
-// #intro{
-// 	background-color: #302c28;
-// 	position: fixed;
-// 	top: 0;
-// 	left: 0;
-// 	width: 100%;
-// 	height: 100%;
-// 	display: flex;
-// 	flex-direction: column;
-// 	justify-content: center;
-// 	opacity: 1;
-// 	z-index: 99;
-// 	img{
-// 		display: block;
-// 		margin: 0 auto;
-// 		width: 260px;
-// 		height: 46px;
-// 		background-color: red;
-// 	}
-// }
+.intro-loader{
+	background-color: #302c28;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	opacity: 1;
+	z-index: 1000;
+}
