--- a/dev/scss/views/_about.scss
+++ b/dev/scss/views/_about.scss
@@ -28,11 +28,15 @@
 		right: 0;
 		top: 50%;
 		transform: translateY(-50%);
+		@media(min-width: 768px){
+			right: -12px;
+		}
+		li.dot-slider{
+			animation-duration: 100ms;
+		}
 	}
 }
-.estraClasses{
 
-}
 // about component
 .about-component{
 	font-family: 'TitlingGothicFB light';
@@ -45,16 +49,70 @@
 		// background: green;
 		position: relative;
 		display: inline-block;
-		h1{
-			margin-bottom: 20px;
+		.title-block{
+			margin-bottom: 13px;
 			letter-spacing: 1px;
+			position: relative;
+			line-height: 1.3em;
+			// mob
+			// &:before{
+			// 	content: "";
+			// 	position: absolute;
+			// 	left: 0;bottom: 24px;
+			// 	width: 100%;
+			// 	height: 10px;
+			// 	background-color: green;
+			// }
+			// &:after{
+			// 	content: "";
+			// 	position: absolute;
+			// 	left: 0;bottom: -13px;
+			// 	width: 100%;
+			// 	height: 19px;
+			// 	background-color: green;
+			// }
+			
+		}
+		.subtitle-block{
+			position: relative;
+			// &:after{
+			// 	content: "";
+			// 	position: absolute;
+			// 	left: 0;bottom: -15px;
+			// 	width: 100%;
+			// 	height: 20px;
+			// 	background-color: green;
+			// }
 		}
 		@media(min-width: 992px){
-			h2{
+			.title-block{
+				line-height: 1.03em;
+				margin-top: 4px;
+				// desk
+				// &:after{
+				// 	content: "";
+				// 	position: absolute;
+				// 	left: -95px;top: -14px;
+				// 	width: 800px;
+				// 	height: 20px;
+				// 	background-color: red;
+				// }
+				// &:before{
+				// 	content: "";
+				// 	position: absolute;
+				// 	left: 0;bottom: 96px;
+				// 	width: 100%;
+				// 	height: 9px;
+				// 	background-color: red;
+				// }
+			}
+			.subtitle-block{
 				font-size: 22px;
 				position: absolute;
 				top: -33px;
 				left: -96px;
+				line-height: 22px;
+				height: 19px;
 				// background: red;
 				// line-height: 0;
 			}
@@ -64,18 +122,26 @@
 	section.about-info{
 		position: relative;
 		display: inline-block;
+		margin-top: -4px;
+		@media(min-width: 768px){
+			margin-top: 0;
+		}
 		// background-color: pink;
 		.separator-line{
 			width: 20px;
 			height: 2px;
-			margin-top: 20px;
-			margin-bottom: 20px;
-			background-color: $cream;
+			margin-top: 15px;
+			margin-bottom: 18px;
 			display: block;
+			.line{
+				background-color: $cream;
+				width: 100%;
+				height: 100%;
+			}
 			@media(min-width: 992px){
 				position: absolute;
 				margin: 0;
-				top: -22px;
+				top: -16px;
 			}
 		}
 
@@ -84,20 +150,33 @@
 			padding-left: 12.5%;
 			line-height: 15px;
 			letter-spacing: 1px;
-			margin-bottom: 20px;
+			margin-bottom: 16px;
+			position: relative;
 			@media(min-width: 992px){
+				margin-top: 6px;
 				padding-left: 0;
-				&.mobile-text{
-					display: none;
-				}
+				margin-bottom: 36px;
+				position: relative;
+				// &.mobile-text{
+				// 	display: none;
+				// }
+				// desk
+				// &:after{
+				// 	content: "";
+				// 	position: absolute;
+				// 	bottom: -46px;left: 0;
+				// 	width: 100%;
+				// 	height: 50px;
+				// 	background-color: red;
+				// }
 			}
 		}
-		.desktop-text{
-			display: none;
-			@media(min-width:992px){
-				display: block;
-			}
-		}
+		// .desktop-text{
+		// 	display: none;
+		// 	@media(min-width:992px){
+		// 		display: block;
+		// 	}
+		// }
 		ul{
 			padding-left: 12.5%;
 			li{
@@ -114,7 +193,7 @@
 				}
 			}
 			@media(min-width: 992px){
-				padding-top: 28px;
+				padding-top: 10px;
 				padding-left: 0;
 				padding-right: 34.333333%;
 				a{
