--- a/dev/scss/views/_contact.scss
+++ b/dev/scss/views/_contact.scss
@@ -1,4 +1,3 @@
-
 .contact-section{
 	background-color: $brown;
 	height: 100%;
@@ -6,42 +5,110 @@
 	flex-direction: column;
 	justify-content: center;
 	h1{margin-bottom: 15px}
+	.center-wrapper{margin-top:5px}
+	@media(min-width: 1200px){
+		.center-wrapper{
+			margin-top: 102px;
+			align-items: baseline;
+		}
+	}
 }
 
 .about-block{
 	// background-color: red;
 	position: relative;
-	h1{
+	cursor: pointer;
+	.title-block{
 		color: $black;
 		padding-left: 10%;
-	}
-	h2{
-		color: $dark-brown;
-		margin-bottom: 12px;
-		&.sub-1{display: block;}
-		&.sub-2{display: none}
-	}
-	.arrow-container{
-		padding-left: 10%;
-		margin-bottom: 40px;
-		display: block;
-		.arrow-right{
-			transform: translateX(-20px);
+		// mob
+		&:after{
+			content: "";
+			position: absolute;
+			left: 0;bottom: -15px;
+			background-color: green;
+			width: 100%;
+			height: 20px;
 		}
 	}
+	.subtitle-block{
+		color: $dark-brown;
+		margin-bottom: 12px;
+		position: relative;
+		@media(min-width: 768px){
+			line-height: 22px;
+			// background: red;
+			height: 19px;
+			margin-bottom: 17px;
+		}
+		&.sub-1{display: block;}
+		&.sub-2{display: none}
+		// mob
+		// &:after{
+		// 	content: "";
+		// 	position: absolute;
+		// 	left: 0;bottom: -15px;
+		// 	background-color: green;
+		// 	width: 100%;
+		// 	height: 20px;
+		// }
+	}
+	.arrow-container{
+		padding-left: 6%;
+		margin-bottom: 42px;
+		display: block;
+		position: relative;
+		@media(min-width: 768px){
+			transform: translateY(2px);
+			padding-left: 10%;
+		}
+		.arrow-wrapper{
+			left:-10px;
+		}
+		span{
+			margin-left: 15px;
+		}
+		// mob
+		// &:after{
+		// 	content: "";
+		// 	position: absolute;
+		// 	left: 0;bottom: -40px;
+		// 	width: 100%;
+		// 	height: 40px;
+		// 	background-color: green;
+		// }
+		@media(min-width: 768px){
+			.arrow-wrapper{
+				left: inherit;
+			}
+			span{
+				margin-left: 12px;
+			}
+		}
+	}
+	// linea medio
 	&:after{
 		content: "";
 		width: 2px;
 		height: 150px;
 		position: absolute;
-		right: -35px;
-		top: -8px;
+		right: -37px;
+		top: -6px;
 		background-color: $cream;
 		display: none;
 	}
 	&:hover{
 		h1.title-block{
-			color: $cream;
+			-webkit-animation: displayText .65s cubic-bezier(.43,.92,.39,1) forwards; /* Safari 4.0 - 5.0 */
+			animation: displayText .65s cubic-bezier(.43,.92,.39,1) forwards;
+		}
+		.right-translate{
+			-webkit-animation: rightTranslate .8s cubic-bezier(.21,0,0,1) forwards; /* Safari 4.0 - 8.0 */
+			animation: rightTranslate .8s cubic-bezier(.21,0,0,1) forwards;
+		}
+		.rectangle-arrow{
+			-webkit-animation: editRectArrow .8s cubic-bezier(.21,0,0,1) forwards; /* Safari 4.0 - 8.0 */
+			animation: editRectArrow .8s cubic-bezier(.21,0,0,1) forwards;
 		}
 	}
 	@media(min-width: 768px){
@@ -53,15 +120,37 @@
 	}
 	@media(min-width: 1200px){
 		display: inline-block;
-		h1{
-			padding-left: 0;
-			margin-bottom: 0;
-			line-height: 50px;
+		// h1{
+		// 	padding-left: 0;
+		// 	margin-bottom: 0;
+		// 	line-height: 50px;
+		// }
+		.title-block{
+			line-height: 1.06em;
+			position: relative;
+			padding-left: inherit;
+			// desk
+			// &:before{
+			// 	content: "";
+			// 	position: absolute;
+			// 	left: 0;top: -18px;
+			// 	width: 800px;
+			// 	height: 20px;
+			// 	background-color: green;
+			// }
+			// &:after{
+			// 	content: "";
+			// 	position: absolute;
+			// 	right: -40px;bottom: 0;
+			// 	width: 68px;
+			// 	height: 100%;
+			// 	background-color: green;
+			// }
 		}
 		.arrow-container{
 			position: absolute;
-			right: 26px;
-			bottom: 4px;
+			right: 32px;
+			bottom: 22px;
 			margin-bottom: 0;
 			.arrow-right{
 				transform: translateX(0px);
@@ -72,14 +161,26 @@
 
 .social-block{
 	display: inline-block;
-	h2{
-		margin-bottom: 14px;
+	.subtitle-block{
+		margin-top: -2px;
+		height: 14px;
+		line-height: 17px;
+		margin-bottom: 20px;
+		@media(min-width: 768px){
+			height: 19px;
+			line-height: 22px;
+			// background: red;
+			margin-bottom: 20px;
+		}
 	}
 	ul{
 		padding-left: 25%;
 	}
 	li{
 		margin-bottom: 10px;
+		line-height: 10px;
+		height: 9px;
+		// background: red;
 		a{
 			font-size: 12px;
 			font-family: 'TitlingGothicFB Standard';
@@ -102,11 +203,15 @@
 		// }
 	}
 	@media(min-width: 768px){
-		margin-bottom: 12px;
 		ul{
 			padding-left: 0;
 			li{
-				margin-bottom: 4px;
+				// line-height: inherit;
+				// height: inherit;
+				// margin-bottom: 12px;
+				margin-bottom: 10px;
+				line-height: 16px;
+				height: 13px;
 			}
 			a{
 				font-size: 16px;
@@ -131,16 +236,21 @@
 			padding-top: 7px;
 		}
 		&:nth-child(3){
-			padding-top: 10px;
+			padding-top: 11px;
 		}
 	}
 	@media(min-width: 768px){
 		padding: 0;
-		margin-top: 87px;
+		// margin-top: 75px;
+		margin-top: 74px;
 		display: flex;
 		font-size: 12px;
 		h3{
 			display: block;
+			line-height: 14px;
+			height: 12px;
+			margin-bottom: 18px;
+			font-size: 12px;
 		}
 		.info-block{
 			// width: 22.22%;
@@ -150,6 +260,7 @@
 			// background-color: green;
 			padding-left: 5px;
 			padding-right: 5px;
+			font-size: 12px;
 			&:nth-child(2){
 				padding-top: 0px;
 			}
